# cards-on-chain

./: .gitignore  CLAUDE.md  README.md
backend/: Cargo.toml  lib.rs
contracts/: Cargo.toml
contracts/cards/: Cargo.toml  lib.rs
contracts/game/: Cargo.toml  lib.rs  plan.md
contracts/shared/: Cargo.toml  lib.rs
frontend/: .gitignore  config.ts  package.json  pnpm-lock.yaml  reactive-dot.d.ts  tsconfig.json
frontend/.papi/: polkadot-api.json
frontend/.papi/descriptors/: package.json
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/game/: page.tsx
frontend/components/: SelectAccount.tsx  board-slot.tsx  card.tsx  debug-log.tsx  game-board.tsx  mana-display.tsx
frontend/components/stages/: FindOpponent.tsx
frontend/hooks/: use-game-state.tsx
frontend/lib/: attack-animations.ts  auto-resolution.ts  cards.ts  client.ts
frontend/lib/contract/: definition.ts  helper.ts  hooks.ts  index.ts  types.ts
scripts/: README.md  bun.lockb  cards_on_chain.json  index.ts  package.json
scripts/.papi/: polkadot-api.json
